* NEW: Autoredirect to the kiwix-plug localised welcome page
* NEW: Way to start search from the console with -search cmd line argument (ID: 3538176)
* NEW: Search Suggestion in kiwix-serve (ID: 2945983)
* NEW: based on recent Mozilla Gecko 14.0.1
* NEW: Desktop shortcut creation in Windows installer
* NEW: Ask to load content at the end of a download (ID: 3563964)

Kiwix 0.9 rc1
* FIXED: Smoothier zooming (ID: 3469927)
* FIXED: "Evolution" skin (ID: 3444112)
* FIXED: Bad aria2c process mgmt. by introducing aria2 v1.14 (ID: 3430225)
* FIXED: Invisible menuitems icons on GNU/Linux
* FIXED: Blanck kiwix-serve 404 error pages (ID: 3417227)
* FIXED: Error during the installation of Ubuntu packages (ID: 3437855)
* FIXED: Bad singleton-window implementation (ID: 3444121)
* FIXED: Compilation with CLucene 2.3 (ID: 3405531)
* FIXED: Too high article/media count in the ZIM library (ID: 3396763)
* FIXED: Kiwix-serve sporadic invisible search box with non-latin contents
* FIXED: Toolbar wrong height on Sugar with XOs (ID: 3471281)
* FIXED: Broken ZIM loading on XO OSes 0.8x (ID: 3471279)
* FIXED: Library filtering by language with ISO639-1 language code ZIM metadata
* FIXED: Continuing indexing process if quitting app.
* FIXED: Text-only zoom. Pictures are now zoomed with Text (ID: 3525284)
* FIXED: Multiple small UI issues (ID: 3514842)
* FIXED: Windows specific ZIM loading problem with accented&relative paths
* FIXED: Zoom factor is not anymore registered over sessions (ID: 3536559)
* FIXED: OSX menu, it feels like a native app. (ID: 3444682, ID: 3444101)
* FIXED: Avoid killing the GNU/Linux session by quitting if aria2 is not launched
* FIXED: Sporadic "segmentation fault" errors in the GNU/Linux file picker (ID: 3512771)
* NEW: New supported user interface languages: Faroese (fo), Croatian (hr),
  Iloko (ilo), Limburgish (li), Basa Banyumasan (map-bms), Pashto (ps), 
  Bachkir (ba), Welsh (cy), Yiddish (yi), Wolof (yo), 